--- a/example/src/main/assets/demo.html
+++ b/example/src/main/assets/demo.html
@@ -59,12 +59,13 @@
             var str2 = document.getElementById("text2").value;
 
             //调用Native方法
-            window.WebViewJavascriptBridge.callHandler('submitFromWeb', {
-                'param': str1,
-            },
-            function(responseData) {
-                document.getElementById("show").innerHTML = "send get responseData from java, data = " + responseData
-            })
+            window.WebViewJavascriptBridge.callHandler(
+                'submitFromWeb'
+                , {'param': str1}
+                , function(responseData) {
+                    document.getElementById("show").innerHTML = "send get responseData from java, data = " + responseData
+                }
+            );
         }
 
         function bridgeLog(logContent) {
@@ -75,28 +76,30 @@
             if (window.WebViewJavascriptBridge) {
                 callback(WebViewJavascriptBridge)
             } else {
-                document.addEventListener('WebViewJavascriptBridgeReady',
-                function() {
-                    callback(WebViewJavascriptBridge)
-                },
-                false)
+                document.addEventListener(
+                    'WebViewJavascriptBridgeReady'
+                    , function() {
+                        callback(WebViewJavascriptBridge)
+                    },
+                    false
+                );
             }
         }
 
         connectWebViewJavascriptBridge(function(bridge) {
             bridge.init(function(message, responseCallback) {
-                console.log('JS got a message', message)
+                console.log('JS got a message', message);
                 var data = {
                     'Javascript Responds': 'Wee!'
-                }
-                console.log('JS responding with', data)
-                responseCallback(data)
+                };
+                console.log('JS responding with', data);
+                responseCallback(data);
             });
 
             bridge.registerHandler("functionInJs", function(data, responseCallback) {
-                document.getElementById("show").innerHTML = ("data from Java: = " + data)
-                var responseData = "Javascript Says Right back aka!"
-                responseCallback(responseData)
+                document.getElementById("show").innerHTML = ("data from Java: = " + data);
+                var responseData = "Javascript Says Right back aka!";
+                responseCallback(responseData);
             });
         })
     </script>
