--- a/example/src/main/assets/demo.html
+++ b/example/src/main/assets/demo.html
@@ -19,7 +19,7 @@
             <input type="text" id="text1" value="用户名(username)" />
         </p>
         <p>
-            <input type="text" id="text2" value="passwod" />
+            <input type="text" id="text2" value="password" />
         </p>
         <p>
             <input type="button" id="enter" value="发消息给Native" onclick="testClick();"
@@ -45,12 +45,14 @@
             var str1 = document.getElementById("text1").value;
             var str2 = document.getElementById("text2").value;
 
-            //发消息给OC
+            //send message to native
             var data = "name=" + str1 + ",pass=" + str2;
-            window.WebViewJavascriptBridge.send(data,
-            function(responseData) {
-                document.getElementById("show").innerHTML = "repsonseData from java, data = " + responseData
-            });
+            window.WebViewJavascriptBridge.send(
+                data
+                , function(responseData) {
+                    document.getElementById("show").innerHTML = "repsonseData from java, data = " + responseData
+                }
+            );
 
         }
 
@@ -58,7 +60,7 @@
             var str1 = document.getElementById("text1").value;
             var str2 = document.getElementById("text2").value;
 
-            //调用Native方法
+            //call native method
             window.WebViewJavascriptBridge.callHandler(
                 'submitFromWeb'
                 , {'param': str1}
