1.add <tel:199>  direct to call line 199 or other phones; 2. OverrideUrlLoading can let people do more thins when handle the url.

--- a/example/src/main/assets/demo.html
+++ b/example/src/main/assets/demo.html
@@ -35,6 +35,12 @@
         <p>
             <input type="file" value="打开文件" />
         </p>
+        <p>
+            <a href="tel:119"><input type="button" value="拨打电话119" /></a>
+        </p>
+        <p>
+            <a href="https://github.com/lzyzsd/JsBridge"><input type="button" value="是否为github的仓库地址" /></a>
+        </p>
     </body>
     <script>
         function testDiv() {
